reformat code *.java according to Google coding style